Make toList() calls jdk11 compatible